# public/spec/swagger.yaml
@@ -281,6 +281,28 @@ paths:
         500:
           $ref: "#/responses/Internal"
 
+    delete:
+      operationId: deleteComputer
+      description: "Deletes the computer with its group memberships"
+      tags:
+        - computer
+      security:
+        - auth_key: []
+      summary: Delete a computer
+      responses:
+        200:
+          description: Computer succesfully deleted
+          schema:
+            $ref: "#/definitions/Computer"
+        400:
+          $ref: "#/responses/BadRequest"
+        401:
+          $ref: "#/responses/Unauthorized"
+        500:
+          $ref: "#/responses/Internal"
+
+
+
 
   /users/current/computers/{computer_id}/groups:
     parameters:
